bugfix white space

--- a/css/index.css
+++ b/css/index.css
@@ -88,8 +88,8 @@ nav {
 }
 
 nav ul {
-    list-style: none;
     display: flex;
+    list-style: none;
     margin: 0;
 }
 
@@ -97,6 +97,7 @@ nav a.brand {
     color: #fff;
     font-size: 1.171875rem;
     font-weight: 300;
+    white-space: nowrap;
 }
 
 nav a.brand:hover {
